fix override not loading correctly

--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -1,2 +1,2 @@
-<link rel="stylesheet" href="{{.Site.BaseURL}}css/override.css">
+<link rel="stylesheet" href="{{.Site.BaseURL}}/css/override.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6985699970333869" crossorigin="anonymous"></script>
