--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,8 +5,7 @@
         {{ else }}
         {{ partial "logo.html" . }}
         <div class="copyright">
-            <span>© {{ now.Year }} BeryJu.org, powered by
-                <a href="https://gohugo.io" target="_blank" rel="noopener">Hugo</a></span>
+            <span>© {{ now.Year }} <a href="https://beryju.org" target="_blank" rel="noopener">BeryJu.org</a></span>
             <span>Theme created by
                 <a href="https://twitter.com/panr" target="_blank" rel="noopener">panr</a></span>
         </div>
