--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -5,3 +5,4 @@
 {{ printf `
 <link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
 {{ end -}}
+<meta name="go-import" content="beryju.org git https://github.com/BeryJu">
