migrate plausible domain

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,9 +5,10 @@
         {{ else }}
         {{ partial "logo.html" . }}
         <div class="copyright">
-            <span>© {{ now.Year }} <a href="https://beryju.org" target="_blank" rel="noopener">BeryJu.org</a></span>
+            <span>© {{ now.Year }} <a href="https://beryju.io" target="_blank" rel="noopener">BeryJu.io</a></span>
             <span>Theme created by
-                <a href="https://twitter.com/panr" target="_blank" rel="noopener">panr</a></span>
+                <a href="https://twitter.com/panr" target="_blank" rel="noopener">panr</a>
+            </span>
         </div>
         {{ end }}
     </div>
