--- a/layouts/partials/extended_head.html
+++ b/layouts/partials/extended_head.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="{{.Site.BaseURL}}/css/override.css">
-<script async defer data-domain="beryju.org" src="https://beryju.org/js/script.js"></script>
+<script async defer data-domain="beryju.io" src="https://beryju.io/js/script.js"></script>
 {{ range .AlternativeOutputFormats -}}
 {{ printf `
 <link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
